--- a/css/footer.css
+++ b/css/footer.css
@@ -64,4 +64,15 @@ ul.social-icons {
 
 .fa-google:hover {
     background-color: green;
+
+}
+
+.fa-envelope {
+    padding:10px 11px;
+    transition: .5s;
+    background-color: #322f30;
+}
+
+.fa-envelope:hover {
+    background-color: #d44638;
 }
